Etkinlik Sayfası Eklendi

--- a/activities.html
+++ b/activities.html
@@ -196,12 +196,12 @@
                                     </div>
                                     <div class="info">
                                         <div class="tags" style="margin-bottom: -30px;">
-                                            <a href="#"><h4>Performance</h4></a>
+                                            <a href="#"><h4>Kapalı Spor Salonu Açılış Konuşması</h4></a>
                                         </div>
-                                        <div class="meta">
+                                        <div>
                                             <ul>
                                             
-                                                <li><b> Ekipbaşı: </b><a href="#"><p>İlim Deniz Toprak</p></a></li>
+                                                <li><b> TARİH: </b><a href="#"><p>05 Eylül 2023</p></a></li>
                                             </ul>
                                         </div>
                                         <p>
