--- a/activities_detail.html
+++ b/activities_detail.html
@@ -63,30 +63,13 @@
         <nav class="navbar navbar-default navbar-sticky dark attr-border bootsnav">
 
             <!-- Start Top Search -->
-            <div class="container">
-                <div class="row">
-                    <div class="top-search">
-                        <div class="input-group">
-                            <form action="#">
-                                <input type="text" name="text" class="form-control" placeholder="Search">
-                                <button type="submit">
-                                    <i class="ti-search"></i>
-                                </button>  
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
+           
             <!-- End Top Search -->
 
             <div class="container">
 
                 <!-- Start Atribute Navigation -->
-                <div class="attr-nav">
-                    <ul>
-                        <li class="search"><a href="#"><i class="fas fa-search"></i></a></li>
-                    </ul>
-                </div>        
+                     
                 <!-- End Atribute Navigation -->
 
                 <!-- Start Header Navigation -->
@@ -136,6 +119,37 @@
                 </div><!-- /.navbar-collapse -->
             </div>
 
+            <!-- Start Side Menu -->
+            <div class="side">
+                <a href="#" class="close-side"><i class="ti-close"></i></a>
+                <div class="widget">
+                    <h4 class="title">Get in touch</h4>
+                    <p>
+                        Arrived compass prepare an on as. Reasonable particular on my it in sympathize. Size now easy eat hand how. Unwilling he departure elsewhere dejection at. Heart large seems may purse means few blind.
+                    </p>
+                    <a href="#" class="btn btn-theme effect btn-sm" data-animation="animated slideInUp">Consultation</a>
+                </div>
+                <div class="widget">
+                    <h4 class="title">Additional Links</h4>
+                    <ul>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Projects</a></li>
+                        <li><a href="#">Login</a></li>
+                        <li><a href="#">Register</a></li>
+                    </ul>
+                </div>
+                <div class="widget social">
+                    <h4 class="title">Connect With Us</h4>
+                    <ul class="link">
+                        <li class="facebook"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                        <li class="twitter"><a href="#"><i class="fab fa-twitter"></i></a></li>
+                        <li class="pinterest"><a href="#"><i class="fab fa-pinterest"></i></a></li>
+                        <li class="dribbble"><a href="#"><i class="fab fa-dribbble"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+            <!-- End Side Menu -->
+
         </nav>
         <!-- End Navigation -->
 
@@ -151,7 +165,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 offset-lg-2">
-                    <h1>ETKİNLİKLERİMİZ</h1>
+                    <h1>Etkinliklerimiz Detay</h1>
                 </div>
             </div>
         </div>
